# quars

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
src/: config.rs  main.rs  optimization.rs  portfolio.rs  utils.rs  visualization.rs
src/data/: mod.rs
src/data/data_brokers/: alphavantage.rs  mod.rs  twelve.rs
src/math/: mod.rs
src/math/optimization/: mod.rs
