[package]
name = "quars"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
config = "0.13.3"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
csv = "1.1"
argmin = "0.5"
plotters = "0.3"
chrono = "0.4.40"
serde_json = "1.0.140"
ndarray = { version = "0.15", features = ["blas"] }
ndarray-linalg = { version = "0.15", features = ["openblas-system"] }
openblas-src = { version = "0.10.11" }
